--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="col-12 col-lg-12 col-md-12">
             <div class="row">
               <div class="col-xl-4 col-lg-4 col-md-5 offset-md-1 offset-0 text-center align-items-end order-md-first order-last">
-                <picture><img src="images/banner-model.png" class="img-fluid banner-img-cls pt-5 mt-xl-5 mt-0 px-lg-3 px-0" alt="banner-model"></picture>
+                <picture><img src="images/banner-model.webp" class="img-fluid banner-img-cls pt-5 mt-xl-5 mt-0 px-lg-3 px-0" alt="banner-model"></picture>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-5 col-12 d-block justify-content-lg-start text-center text-md-left  align-items-center">
                 <div class="banner-content-cls mt-lg-5 pt-lg-5 mt-1 pt-1">
@@ -113,19 +113,19 @@
         <div class="col-12">
           <div class="row py-3 icon-band">
             <div class="col-lg col-12 col-md-6 mb-3 mb-lg-0">
-              <div class="d-flex align-items-center"><img src="images/icon-info-1.png" alt=""><span class="text-white icon-band-text pl-3">Quick</span></div>
+              <div class="d-flex align-items-center"><img src="images/icon-info-1.webp" alt=""><span class="text-white icon-band-text pl-3">Quick</span></div>
             </div>
             <div class="col-lg col-12 col-md-6 mb-3 mb-lg-0">
-              <div class="d-flex align-items-center"><img src="images/icon-info-2.png" alt=""><span class="text-white icon-band-text pl-3">Cost<br class="d-none d-md-block">Effective</span></div>
+              <div class="d-flex align-items-center"><img src="images/icon-info-2.webp" alt=""><span class="text-white icon-band-text pl-3">Cost<br class="d-none d-md-block">Effective</span></div>
             </div>
             <div class="col-lg col-12 col-md-6 mb-3 mb-lg-0">
-              <div class="d-flex align-items-center"><img src="images/icon-info-3.png" alt=""><span class="text-white icon-band-text pl-3">Confidential</span></div>
+              <div class="d-flex align-items-center"><img src="images/icon-info-3.webp" alt=""><span class="text-white icon-band-text pl-3">Confidential</span></div>
             </div>
             <div class="col-lg col-12 col-md-6 mb-3 mb-lg-0">
-              <div class="d-flex align-items-center"><img src="images/icon-info-4.png" alt=""><span class="text-white icon-band-text pl-3">Free Medicine<br class="d-none d-md-block">Delivery</span></div>
+              <div class="d-flex align-items-center"><img src="images/icon-info-4.webp" alt=""><span class="text-white icon-band-text pl-3">Free Medicine<br class="d-none d-md-block">Delivery</span></div>
             </div>
             <div class="col-lg col-12 col-md-6 mb-3 mb-lg-0">
-              <div class="d-flex align-items-center"><img src="images/icon-info-5.png" alt=""><span class="text-white icon-band-text pl-3">Instant<br class="d-none d-md-block">Consultation</span></div>
+              <div class="d-flex align-items-center"><img src="images/icon-info-5.webp" alt=""><span class="text-white icon-band-text pl-3">Instant<br class="d-none d-md-block">Consultation</span></div>
             </div>
           </div>
         </div>
@@ -143,10 +143,10 @@
               <div class="col-12">
                 <div class="section-padding">
                   <div class="screenshot_slider owl-carousel">
-                    <div class="item"><img src="images/01-before-after.png" alt=""></div>
-                    <div class="item"><img src="images/02-before-after.png" alt=""></div>
-                    <div class="item"><img src="images/01-before-after.png" alt=""></div>
-                    <div class="item"><img src="images/01-before-after.png" alt=""></div>
+                    <div class="item"><img src="images/01-before-after.webp" alt=""></div>
+                    <div class="item"><img src="images/02-before-after.webp" alt=""></div>
+                    <div class="item"><img src="images/01-before-after.webp" alt=""></div>
+                    <div class="item"><img src="images/01-before-after.webp" alt=""></div>
                   </div>
                 </div>
               </div>
@@ -162,7 +162,7 @@
         <div class="col-lg-9">
           <div class="col-12 text-center">
             <div class="row">
-              <div class="col-lg-7 col-md-12"><img src="images/hand.png" class="img-fluid what-hand-css"></div>
+              <div class="col-lg-7 col-md-12"><img src="images/hand.webp" class="img-fluid what-hand-css"></div>
               <div class="col-lg-5 col-md-12 what-box-css">
                 <h2 class="main-all-heading text-white pb-2">WHAT IS VITILIGO?</h2>
                 <p class="all-main-para text-white mb-0">Vitiligo, also commonly known as Leucoderma, is a common skin pigmentation disorder characterized by irregular, pale or milky white patches on the body. Vitiligo causes can be due to several reasons; however, this happens when melanocytes, the pigment which gives our skin its colour, start malfunctioning resulting in white patches or pigmentations.</p>
@@ -181,8 +181,8 @@
             <div class="row">
               <div class="col-12 pb-4">
                 <h2 class="main-all-heading text-center">causes of vitiligo</h2></div>
-              <div class="col-md-11 mx-auto px-0 text-center d-none d-lg-block"><img src="images/causes-of-vitiligo.png" class="img-fluid" alt="Causes of vitiligo"></div>
-              <div class="col-12 d-block d-lg-none"><img src="images/causes-of-vitiligo-mob.png" class="img-fluid" alt="Causes of vitiligo"></div>
+              <div class="col-md-11 mx-auto px-0 text-center d-none d-lg-block"><img src="images/causes-of-vitiligo.webp" class="img-fluid" alt="Causes of vitiligo"></div>
+              <div class="col-12 d-block d-lg-none"><img src="images/causes-of-vitiligo-mob.webp" class="img-fluid" alt="Causes of vitiligo"></div>
             </div>
           </div>
         </div>
@@ -199,16 +199,16 @@
                 <h2 class="main-all-heading text-md-left text-center">Where Does Vitiligo Show Up on the Body?</h2>
                 <p class="all-main-para">A person's skin can develop vitiligo anywhere on their body. When vitiligo first develops, the patches typically show up on the:</p>
                 <div class="row">
-                  <div class="col-md-2 col-6 text-center px-0"><img src="images/face-icon.png" class="img-fluid">
+                  <div class="col-md-2 col-6 text-center px-0"><img src="images/face-icon.webp" class="img-fluid">
                     <p class="icon-para-cs">Face</p>
                   </div>
-                  <div class="col-md-2 col-6 text-center px-0"><img src="images/arm-icon.png" class="img-fluid">
+                  <div class="col-md-2 col-6 text-center px-0"><img src="images/arm-icon.webp" class="img-fluid">
                     <p class="icon-para-cs">Arms</p>
                   </div>
-                  <div class="col-md-2 col-6 text-center px-0"><img src="images/hand-icon.png" class="img-fluid">
+                  <div class="col-md-2 col-6 text-center px-0"><img src="images/hand-icon.webp" class="img-fluid">
                     <p class="icon-para-cs">Hands</p>
                   </div>
-                  <div class="col-md-2 col-6 text-center px-0"><img src="images/foot-icon.png" class="img-fluid">
+                  <div class="col-md-2 col-6 text-center px-0"><img src="images/foot-icon.webp" class="img-fluid">
                     <p class="icon-para-cs last-chiled-apra-icon">Feet</p>
                   </div>
                 </div>
@@ -238,31 +238,31 @@
                 <div id="vitiligo-treatment-slider" class="owl-carousel">
                   <div class="type-vitiligo-slider-box">
                     <div class="text-center">
-                      <img src="images/vitiligo-type-1.png" class="img-fluid text-center" alt="Mild Peels">
+                      <img src="images/vitiligo-type-1.webp" class="img-fluid text-center" alt="Mild Peels">
                       <h5 class="type-vitiligo-head">Vitiligo Vulgaris</h5>
                     </div>
                   </div>
                   <div class="type-vitiligo-slider-box">
                     <div class="text-center">
-                      <img src="images/vitiligo-type-2.png" class="img-fluid text-center" alt="Mild Peels">
+                      <img src="images/vitiligo-type-2.webp" class="img-fluid text-center" alt="Mild Peels">
                       <h5 class="type-vitiligo-head">Focal Vitiligo</h5>
                     </div>
                   </div>
                   <div class="type-vitiligo-slider-box">
                     <div class="text-center">
-                      <img src="images/vitiligo-type-3.png" class="img-fluid text-center" alt="Mild Peels">
+                      <img src="images/vitiligo-type-3.webp" class="img-fluid text-center" alt="Mild Peels">
                       <h5 class="type-vitiligo-head">Segmental Vitiligo</h5>
                     </div>
                   </div>
                   <div class="type-vitiligo-slider-box">
                     <div class="text-center">
-                      <img src="images/vitiligo-type-4.png" class="img-fluid text-center" alt="Mild Peels">
+                      <img src="images/vitiligo-type-4.webp" class="img-fluid text-center" alt="Mild Peels">
                       <h5 class="type-vitiligo-head">Acrofacial Vulgaris</h5>
                     </div>
                   </div>
                   <div class="type-vitiligo-slider-box">
                     <div class="text-center">
-                      <img src="images/vitiligo-type-5.png" class="img-fluid text-center" alt="Mild Peels">
+                      <img src="images/vitiligo-type-5.webp" class="img-fluid text-center" alt="Mild Peels">
                       <h5 class="type-vitiligo-head">Vitiligo Universalis</h5>
                     </div>
                   </div>
@@ -377,7 +377,7 @@
               <div class="col-12">
                 <p class="all-main-para">At Dr Batra’s<sup>®</sup> we have a total medical experience of more than 1600 years. The Doctors that treat you at Dr Batra’s<sup>®</sup> are specialized in the field of Homeopathy. We also have a medical advisory board that includes super specialty MD’s for dermatology and other specialties like cardiology, pediatrics, gynecology, gastroenterology, trichology, psychotherapy, and de-addiction therapy. Our doctors are experienced and highly trained in their fields. They are specialized in excellence and more importantly, they specialize in you.</p>
               </div>
-              <div class="col-md-7"><img src="images/our-doctor.png" class="img-fluid"></div>
+              <div class="col-md-7 pb-md-0 pb-4"><img src="images/our-doctor.webp" class="img-fluid"></div>
               <div class="col-md-5">
                 <h3 class="our-doctor-heading">Dr. Lakshmi Engineer</h3>
                 <p class="our-doctor-para">Qualification: MD (HOM) B.H.M.S(Bom)
@@ -405,39 +405,39 @@
                 <h2 class="main-all-heading text-center">why dr batra’s<sup>®</sup></h2></div>
             </div>
             <div class="row">
-              <div class="col-md-3 col-6"><img src="images/Happy-Skin-Patients.png" class="img-fluid">
+              <div class="col-md-3 col-6"><img src="images/Happy-Skin-Patients.webp" class="img-fluid">
                 <h3 class="intr_top2">1,40,000</h3>
                 <p class="intr_para">Happy Skin Patient</p>
                 <hr class="why-hr-line">
               </div>
-              <div class="col-md-3 col-6"><img src="images/Success-Rate.png" class="img-fluid">
+              <div class="col-md-3 col-6"><img src="images/Success-Rate.webp" class="img-fluid">
                 <h3 class="intr_top2">94.3%</h3>
                 <p class="intr_para">Success Rate</p>
                 <hr class="why-hr-line">
               </div>
-              <div class="col-md-3 col-6"><img src="images/Experienced.png" class="img-fluid">
+              <div class="col-md-3 col-6"><img src="images/Experienced.webp" class="img-fluid">
                 <h3 class="intr_top2">Experienced</h3>
                 <p class="intr_para">Homeopathic Dermatologists</p>
                 <hr class="why-hr-line">
               </div>
-              <div class="col-md-3 col-6"><img src="images/Expert.png" class="img-fluid">
+              <div class="col-md-3 col-6"><img src="images/Expert.webp" class="img-fluid">
                 <h3 class="intr_top2">Expert</h3>
                 <p class="intr_para">Medical Advisory Board</p>
                 <hr class="why-hr-line">
               </div>
             </div>
             <div class="row">
-              <div class="col-md-4 col-6 offset-md-1"><img src="images/Advanced-technology.png" class="img-fluid">
+              <div class="col-md-4 col-6 offset-md-1"><img src="images/Advanced-technology.webp" class="img-fluid">
                 <h3 class="intr_top2">Advanced technology</h3>
                 <p class="intr_para">For Diagnosis and Treatment</p>
                 <hr class="why-hr-line">
               </div>
-              <div class="col-md-3 col-6"><img src="images/Network.png" class="img-fluid">
+              <div class="col-md-3 col-6"><img src="images/Network.webp" class="img-fluid">
                 <h3 class="intr_top2">Network of</h3>
                 <p class="intr_para">300+ Doctors</p>
                 <hr class="why-hr-line">
               </div>
-              <div class="col-md-3 col-6 offset-md-0 offset-3"><img src="images/Clinics.png" class="img-fluid">
+              <div class="col-md-3 col-6 offset-md-0 offset-3"><img src="images/Clinics.webp" class="img-fluid">
                 <h3 class="intr_top2">200+</h3>
                 <p class="intr_para">Clinics Globally</p>
                 <hr class="why-hr-line">
@@ -456,16 +456,16 @@
             <div class="row">
               <div class="col-12 pb-4">
                 <h2 class="main-all-heading text-center">awards</h2></div>
-              <div class="col-md-3 col-6"><img src="images/Brussels.png" class="img-fluid award-img-logo">
+              <div class="col-md-3 col-6"><img src="images/Brussels.webp" class="img-fluid award-img-logo">
                 <p class="award-heading pt-3">winner - european awards Brussels - 2016</p>
               </div>
-              <div class="col-md-3 col-6"><img src="images/medical.png" class="img-fluid award-img-logo">
+              <div class="col-md-3 col-6"><img src="images/medical.webp" class="img-fluid award-img-logo">
                 <p class="award-heading pt-3">certified by european medical association - 2015</p>
               </div>
-              <div class="col-md-3 col-6"><img src="images/socrates.png" class="img-fluid award-img-logo">
+              <div class="col-md-3 col-6"><img src="images/socrates.webp" class="img-fluid award-img-logo">
                 <p class="award-heading pt-3">best clinic - socrates committe oxford - 2015</p>
               </div>
-              <div class="col-md-3 col-6"><img src="images/greatest.png" class="img-fluid award-img-logo">
+              <div class="col-md-3 col-6"><img src="images/greatest.webp" class="img-fluid award-img-logo">
                 <p class="award-heading pt-3">World’s greatest brand 2017</p>
               </div>
             </div>
@@ -509,7 +509,7 @@
     autoplayTimeout: 4e3,
     smartSpeed: 400,
     center: !0,
-    navText:  ["<img src='images/previmage.png'>","<img src='images/nextimage.png'>"],
+    navText:  ["<img src='images/previmage.webp'>","<img src='images/nextimage.webp'>"],
     responsive: {
       0: {
         items: 1
@@ -534,7 +534,7 @@
     autoplayTimeout: 4e3,
     smartSpeed: 400,
     // center: !0,
-    navText:  ["<img src='images/previmage.png'>","<img src='images/nextimage.png'>"],
+    navText:  ["<img src='images/previmage.webp'>","<img src='images/nextimage.webp'>"],
     responsive: {
       0: {
         items: 1
