--- a/index.html
+++ b/index.html
@@ -51,38 +51,6 @@
   </header>
   <section class="banner_cus_bg">
     <div class="container-fluid banner_area uk-banner-vitiligo">
-      <div class="contactFormHolder">
-        <div class="contactForm">
-          <div class="form-widget"><img src="images/db-logo.webp" width="150px" height="53" class="img-responsive dblogo">
-            <div class="clear-fix d-md-block">&nbsp;</div>
-          </div>
-          <form>
-            <p class="text-uppercase text-center form_head_text pt-2">consult a
-              <br>skin doctor</p>
-            <div class="col-12 pl-0 pr-0">
-              <div class="row form-group">
-                <div class="col-12 pb-3">
-                  <input class="form-control bg-transparent" placeholder="Name" name="name" id="Name">
-                </div>
-                <div class="col-3 pr-0">
-                  <select class="form-select bg-transparent" aria-invalid="false">
-                    <option value="+971">+91</option>
-                  </select>
-                </div>
-                <div class="col-9">
-                  <input type="tel" class="form-control bg-transparent" placeholder="Mobile" name="mobile" id="mobile">
-                </div>
-              </div>
-              <div class="col-12 pl-0 pr-0">
-                <div class="form-group form-check align-items-center">
-                  <label class="form-check-label small" for="conditions"><span style="margin-top:0" class="d-block"><input type="checkbox" name="chk2" class="form-check-input mt-0" id="chk2">I understand and accept the <a href="https://www.drbatras.ae/privacy-policy" class="text-dark">&nbsp;terms and conditions</a>*.</span></label>
-                </div>
-              </div>
-            </div>
-            <input type="submit" class="btn mx-auto book_btn rounded-pill d-block" name="btnSubmit" value="BOOK NOW" id="btnSubmit">
-          </form>
-        </div>
-      </div>
       <div class="row d-flex justify-content-start align-items-end">
         <div class="container-fluid pl-0 pr-0">
           <div class="col-12 col-lg-12 col-md-12">
@@ -107,7 +75,45 @@
       </div>
     </div>
   </section>
+  
   <section class="container-fluid bg-band band-area px-0">
+    <div class="contactFormHolder">
+        <div class="contactForm">
+          <div class="form-widget"><img src="images/db-logo.webp" width="150px" height="53" class="img-responsive dblogo">
+            <div class="clear-fix d-md-block">&nbsp;</div>
+          </div>
+          <form>
+            <p class="text-uppercase text-center form_head_text pt-2">consult a
+              <br> skin doctor Online</p>
+            <div class="col-12 pl-0 pr-0">
+              <div class="row form-group">
+                <div class="col-12 pb-3">
+                  <input class="form-control bg-transparent" placeholder="Name" name="name" id="Name">
+                </div>
+                <div class="col-3 pr-0">
+                  <select class="form-select bg-transparent" aria-invalid="false">
+                    <option value="+44">+44</option>
+                  </select>
+                </div>
+                <div class="col-9">
+                  <input type="tel" class="form-control bg-transparent" placeholder="Mobile" name="mobile" id="mobile">
+                </div>
+              </div>
+              <div class="col-12 pl-0 pr-0">
+                <div class="form-group form-check align-items-center">
+                  <label class="form-check-label small" for="conditions"><span style="margin-top:0" class="d-block"><input type="checkbox" name="chk2" class="form-check-input mt-0" id="chk2">I understand and accept the <a href="https://www.drbatras.ae/privacy-policy" class="text-dark">&nbsp;terms and conditions</a>*.</span></label>
+                </div>
+              </div>
+              <div class="col-12 pl-0 pr-0">
+                <div class="form-group form-check align-items-center">
+                  <label class="form-check-label small" for="conditions"><span style="margin-top:0" class="d-block"><input type="checkbox" name="chk2" class="form-check-input mt-0" id="chk2">By submitting the above details you agree to receive a Call or WhatsApp from our team for an appointment or marketing purpose*.</label>
+                </div>
+              </div>
+            </div>
+            <input type="submit" class="btn mx-auto book_btn rounded-pill d-block" name="btnSubmit" value="Book Online Consultation" id="btnSubmit">
+          </form>
+        </div>
+      </div>
     <div class="container">
       <div class="row d-flex justify-content-center">
         <div class="col-12">
@@ -160,7 +166,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-9">
-          <div class="col-12 text-center">
+          <div class="col-12">
             <div class="row">
               <div class="col-lg-7 col-md-12"><img src="images/hand.webp" class="img-fluid what-hand-css"></div>
               <div class="col-lg-5 col-md-12 what-box-css">
@@ -182,7 +188,7 @@
               <div class="col-12 pb-4">
                 <h2 class="main-all-heading text-center">causes of vitiligo</h2></div>
               <div class="col-md-11 mx-auto px-0 text-center d-none d-lg-block"><img src="images/causes-of-vitiligo.webp" class="img-fluid" alt="Causes of vitiligo"></div>
-              <div class="col-12 d-block d-lg-none"><img src="images/causes-of-vitiligo-mob.webp" class="img-fluid" alt="Causes of vitiligo"></div>
+              <div class="col-12 d-block d-lg-none"><img src="images/causes-of-vitiligo-mob.webp" class="img-fluid" alt="Causes of vitiligo" width="100%"></div>
             </div>
           </div>
         </div>
@@ -196,7 +202,7 @@
           <div class="col-12">
             <div class="row">
               <div class="col-md-12">
-                <h2 class="main-all-heading text-md-left text-center">Where Does Vitiligo Show Up on the Body?</h2>
+                <h2 class="main-all-heading">Where Does Vitiligo Show Up on the Body?</h2>
                 <p class="all-main-para">A person's skin can develop vitiligo anywhere on their body. When vitiligo first develops, the patches typically show up on the:</p>
                 <div class="row">
                   <div class="col-md-2 col-6 text-center px-0"><img src="images/face-icon.webp" class="img-fluid">
@@ -292,7 +298,7 @@
           <div class="col-12">
             <div class="row">
               <div class="col-12 pb-4">
-                <h2 class="main-all-heading text-center">Symptoms of vitiligo</h2>
+                <h2 class="main-all-heading text-md-center text-left">Symptoms of vitiligo</h2>
                 <p class="all-main-para">
                  Based on the type of vitiligo disease, the symptoms of vitiligo can be as listed below:
                 </p>
@@ -339,7 +345,7 @@
           <div class="col-12">
             <div class="row">
               <div class="col-12">
-                <h2 class="main-all-heading">our doctors</h2>
+                <h2 class="main-all-heading">Homeopathic Vitiligo Treatment</h2>
                 <h5>There are 5 advantages of vitiligo treatment in homeopathy</h5>
                 <ul class="our-doc-list">
                   <li>Homeopathy is a safe option for treating vitiligo disease as it treats the root cause without side effects.</li>
