--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         <div class="container-fluid pl-0 pr-0">
           <div class="col-12 col-lg-12 col-md-12">
             <div class="row">
-              <div class="col-xl-4 col-lg-4 col-md-5 offset-md-1 offset-0 text-center align-items-end order-md-first order-last">
+              <div class="col-xl-4 col-lg- col-md-5 offset-lg-1 offset-0 text-center align-items-end align-self-end order-md-first order-last">
                 <picture><img src="images/banner-model.webp" class="img-fluid banner-img-cls pt-5 mt-xl-5 mt-0 px-lg-3 px-0" alt="banner-model"></picture>
               </div>
-              <div class="col-xl-4 col-lg-4 col-md-5 col-12 d-block justify-content-lg-start text-center text-md-left  align-items-center">
-                <div class="banner-content-cls mt-lg-5 pt-lg-5 mt-1 pt-1">
+              <div class="col-xl-4 col-lg-4 col-md-5 col-12 d-block justify-content-lg-start text-center text-md-left align-items-center">
+                <div class="banner-content-cls mt-lg-5 pt-lg-5 pt-md-0 mt-1 pt-1">
                   <h2 class="banner_ornge_heding">Treat Vitiligo,</h2>
                   <br>
                   <h2 class="banner_ornge_heding">White Patches,</h2>
@@ -168,7 +168,7 @@
         <div class="col-lg-9">
           <div class="col-12">
             <div class="row">
-              <div class="col-lg-7 col-md-12"><img src="images/hand.webp" class="img-fluid what-hand-css"></div>
+              <div class="col-lg-7 col-md-12 text-center"><img src="images/hand.webp" class="img-fluid what-hand-css"></div>
               <div class="col-lg-5 col-md-12 what-box-css">
                 <h2 class="main-all-heading text-white pb-2">WHAT IS VITILIGO?</h2>
                 <p class="all-main-para text-white mb-0">Vitiligo, also commonly known as Leucoderma, is a common skin pigmentation disorder characterized by irregular, pale or milky white patches on the body. Vitiligo causes can be due to several reasons; however, this happens when melanocytes, the pigment which gives our skin its colour, start malfunctioning resulting in white patches or pigmentations.</p>
