--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/style-child-immunity.css">
+  <link rel="stylesheet" href="css/style.css">
   <style>
   * {
     font-family: Inter, sans-serif;
